# uit

./: .clang-format  .gitignore  AddUserDialog.cpp  AddUserDialog.h  CMakeLists.txt  LogInWidget.ui  MainWindow.cpp  MainWindow.h  SessionManager.cpp  SessionManager.h  User.cpp  User.h  UserDatabase.cpp  UserDatabase.h  UserManager.cpp  UserManager.h  UserTreeWidget.cpp  UserTreeWidget.h  UserTreeWidget.ui  loginwidget.cpp  loginwidget.h  main.cpp  usrlist.ini
Resources/: images.qrc
Resources/style/qdarkstyle/: style.qss
Resources/style/tcdarkcommon/: tcdarkcommon.qrc  tcdarkcommon.qss
Resources/style/tcdarkstyle/: tcdark.qrc  tcdark.qss
Resources/style/tcsimplestyle/: tcsimple.qrc  tcsimple.qss
Resources/style/tctsx/: tctsx.qrc  tctsx.qss
Simulator/: CMakeLists.txt
Simulator/inc/: MainWindow.h
Simulator/src/: MainWindow.cpp  main.cpp
Simulator/ui/: MainWindow.ui
UserManagement/: CMakeLists.txt
UserManagement/inc/: LoginWin.h  UserDatabase.h  UserManager.h  loginwidget.h
UserManagement/src/: LoginWin.cpp  UserDatabase.cpp  UserTreeWidget.cpp
UserManagement/ui/: LogInWidget.ui  LoginWin.ui
inc/: AddUserDialog.h  MainWindow.h  SessionManager.h  User.h  UserTreeWidget.h
src/: MainWindow.cpp  SessionManager.cpp  User.cpp  UserManager.cpp  loginwidget.cpp
ui/: AddUserDialog.ui  UserTreeWidget.ui
